--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ruoyi",
+  "name": "cmyyjcc",
   "version": "2.2.0",
-  "description": "若依管理系统",
-  "author": "若依",
+  "description": "CMYYJCC 管理系统",
+  "author": "林筱",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
